[gd_scene load_steps=18 format=3 uid="uid://cqkqswm0ovfss"]

[ext_resource type="Texture2D" uid="uid://cwswoagt665ls" path="res://assets/Main_Menu_Assets/PanayIsland.png" id="1_fk1gg"]
[ext_resource type="Texture2D" uid="uid://brr7ipwciwbal" path="res://assets/Main_Menu_Assets/Water.png" id="1_n0qu6"]
[ext_resource type="Script" uid="uid://sblo7c0oxmkc" path="res://scenes/ui/Main_Menu/CampaignMenu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://hif4f5wjhr1r" path="res://assets/Main_Menu_Assets/FinalIsometricCircle.png" id="2_h56qn"]
[ext_resource type="Texture2D" uid="uid://dynxnxmjf1tv8" path="res://assets/Main_Menu_Assets/LandMarkIcon.png" id="2_ws25f"]
[ext_resource type="Script" uid="uid://cvthg1ndr8tms" path="res://scripts/ui/menu/CampaignMarkerHover.gd" id="3_wnmx6"]
[ext_resource type="Texture2D" uid="uid://w4rbvou3017d" path="res://assets/Main_Menu_Assets/IloiloIcon2.png" id="5_rw8ch"]
[ext_resource type="Texture2D" uid="uid://bpr6rufkdg11g" path="res://assets/Main_Menu_Assets/IloiloIcon.png" id="6_r0spa"]
[ext_resource type="Texture2D" uid="uid://dnkuocl0lrhha" path="res://assets/Main_Menu_Assets/BanigFrame.png" id="8_6ivqm"]
[ext_resource type="FontFile" uid="uid://bg6pof5832ljm" path="res://assets/fonts/pixel.ttf" id="9_5ywgh"]
[ext_resource type="Texture2D" uid="uid://cko2s4yjsvljf" path="res://assets/Main_Menu_Assets/BanigButtonFrame.png" id="10_5ywgh"]
[ext_resource type="Script" uid="uid://iae7ttpr2nh1" path="res://scripts/ui/menu/TexturebuttonHover.gd" id="10_8gbxi"]
[ext_resource type="Script" uid="uid://d26xks468twvi" path="res://scripts/ui/menu/IdleAnimModule.gd" id="11_w46t7"]
[ext_resource type="Texture2D" uid="uid://dpqmkhncqsx7l" path="res://assets/Main_Menu_Assets/Vignette.png" id="13_bo8e2"]
[ext_resource type="Script" uid="uid://deb7yvwmeyup5" path="res://scripts/ui/menu/BTN_GlobalFunctions.gd" id="14_back"]

[sub_resource type="Shader" id="Shader_8kxf1"]
code = "
shader_type canvas_item;

uniform vec4 top_color    : source_color = vec4(0.20, 0.65, 1.00, 0.85);
uniform vec4 mid_color    : source_color = vec4(0.55, 0.85, 1.00, 0.35);
uniform vec4 bottom_color : source_color = vec4(1.00, 1.00, 1.00, 0.00);

void fragment() {
	// UV.y: 0 top -> 1 bottom for Control/ColorRect
	float t = clamp(UV.y, 0.0, 1.0);

	// two-stage blend for nicer gradient
	vec4 a = mix(top_color, mid_color, smoothstep(0.0, 0.55, t));
	vec4 b = mix(mid_color, bottom_color, smoothstep(0.45, 1.0, t));

	// combine
	vec4 col = mix(a, b, t);
	COLOR = col;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fk1gg"]
shader = SubResource("Shader_8kxf1")
shader_parameter/top_color = Color(0.2, 0.65, 1, 0.85)
shader_parameter/mid_color = Color(0.55, 0.85, 1, 0.35)
shader_parameter/bottom_color = Color(1, 1, 1, 0)

[node name="CampaignMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="CM_CampaignMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="CM_CampaignMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n0qu6")
expand_mode = 3

[node name="SkyGradient" type="ColorRect" parent="CM_CampaignMenu"]
material = SubResource("ShaderMaterial_fk1gg")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MapAspect" type="AspectRatioContainer" parent="CM_CampaignMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="MapIsland" type="Control" parent="CM_CampaignMenu/MapAspect"]
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Level_1" type="TextureButton" parent="CM_CampaignMenu/MapAspect/MapIsland"]
self_modulate = Color(1.1893114, 0.98738146, 0.65517426, 1)
z_index = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53900003
anchor_top = 0.53000003
anchor_right = 0.53900003
anchor_bottom = 0.53000003
offset_left = -25.824097
offset_top = -24.424133
offset_right = 24.175903
offset_bottom = 25.575867
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_h56qn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_wnmx6")
texture_rect_path = NodePath("TextureRect")
icon1_path = NodePath("Icon1")
icon2_path = NodePath("Icon2")
label_path = NodePath("Label")

[node name="Label" type="Label" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_1"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 19
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_1"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = 8.0
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Icon1" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_1"]
modulate = Color(1, 1, 1, 0)
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = -33.0
offset_right = 9.0
offset_bottom = 36.5625
rotation = -0.2617994
texture = ExtResource("5_rw8ch")
expand_mode = 1

[node name="Icon2" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_1"]
modulate = Color(1, 1, 1, 0)
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = -48.0
offset_right = 53.0
offset_bottom = 21.5625
rotation = 0.2617994
texture = ExtResource("6_r0spa")
expand_mode = 1

[node name="Level_2" type="TextureButton" parent="CM_CampaignMenu/MapAspect/MapIsland"]
self_modulate = Color(1.1893114, 0.98738146, 0.65517426, 1)
z_index = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.517
anchor_top = 0.60700005
anchor_right = 0.517
anchor_bottom = 0.60700005
offset_left = -24.888
offset_top = -25.344116
offset_right = 25.112
offset_bottom = 24.655884
texture_normal = ExtResource("2_h56qn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_wnmx6")
texture_rect_path = NodePath("TextureRect")
label_path = NodePath("Label")

[node name="Label" type="Label" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_2"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 19
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_2"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = 8.0
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Level_3" type="TextureButton" parent="CM_CampaignMenu/MapAspect/MapIsland"]
self_modulate = Color(1.1893114, 0.98738146, 0.65517426, 1)
z_index = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.648
anchor_right = 0.238
anchor_bottom = 0.648
offset_left = -25.176
offset_top = -25.496
offset_right = 24.824
offset_bottom = 24.504
texture_normal = ExtResource("2_h56qn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_wnmx6")
texture_rect_path = NodePath("TextureRect")
label_path = NodePath("Label")

[node name="Label" type="Label" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_3"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 19
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_3"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = 8.0
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Level_4" type="TextureButton" parent="CM_CampaignMenu/MapAspect/MapIsland"]
self_modulate = Color(1.1893114, 0.98738146, 0.65517426, 1)
z_index = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.34
anchor_right = 0.4
anchor_bottom = 0.34
offset_left = -24.8
offset_top = -24.68
offset_right = 25.2
offset_bottom = 25.32
texture_normal = ExtResource("2_h56qn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_wnmx6")
texture_rect_path = NodePath("TextureRect")
label_path = NodePath("Label")

[node name="Label" type="Label" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_4"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 19
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_4"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = 8.0
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Level_5" type="TextureButton" parent="CM_CampaignMenu/MapAspect/MapIsland"]
self_modulate = Color(1.1893114, 0.98738146, 0.65517426, 1)
z_index = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.535
anchor_top = 0.39
anchor_right = 0.535
anchor_bottom = 0.39
offset_left = -25.32
offset_top = -25.28
offset_right = 24.68
offset_bottom = 24.72
texture_normal = ExtResource("2_h56qn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_wnmx6")
texture_rect_path = NodePath("TextureRect")
label_path = NodePath("Label")

[node name="Label" type="Label" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_5"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.95)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 19
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland/Level_5"]
z_index = 1
layout_mode = 0
offset_left = 1.0
offset_top = -40.0
offset_right = 49.0
offset_bottom = 8.0
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Image" type="TextureRect" parent="CM_CampaignMenu/MapAspect/MapIsland"]
z_index = 1
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.23
anchor_right = 1.0
anchor_bottom = 0.774
offset_top = -31.96
offset_right = 21.0947
offset_bottom = 45.3519
grow_vertical = 0
localize_numeral_system = false
mouse_filter = 2
texture = ExtResource("1_fk1gg")
expand_mode = 1

[node name="HoverPanel" type="TextureRect" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.674
anchor_top = 0.684
anchor_right = 0.674
anchor_bottom = 0.684
offset_left = -264.448
offset_top = -157.232
offset_right = 265.552
offset_bottom = 156.768
scale = Vector2(1.12239, 1.18119)
texture = ExtResource("8_6ivqm")
expand_mode = 1

[node name="Logo" type="Label" parent="HoverPanel"]
z_index = 1000
layout_mode = 0
offset_left = 54.67607
offset_top = 63.9287
offset_right = 476.0982
offset_bottom = 106.928696
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 20
text = "TUTORIAL"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HorizBar" type="Label" parent="HoverPanel"]
z_index = 100
layout_mode = 1
anchors_preset = -1
anchor_left = 0.304
anchor_top = 0.252
anchor_right = 0.304
anchor_bottom = 0.252
offset_left = -92.12
offset_top = -3.128
offset_right = 98.4769
offset_bottom = 17.872
scale = Vector2(2.0462446, 1.078964)
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 15
text = "──────────────────────────"

[node name="Difficulty" type="Label" parent="HoverPanel"]
z_index = 1000
layout_mode = 0
offset_left = 63.5858
offset_top = 99.4861
offset_right = 513.586
offset_bottom = 124.486
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 13
text = "Progress: 0 / 5 levels"
autowrap_mode = 2

[node name="Description" type="Label" parent="HoverPanel"]
z_index = 1000
layout_mode = 0
offset_left = 60.022
offset_top = 130.0
offset_right = 428.0
offset_bottom = 210.0
scale = Vector2(0.819784, 0.928921)
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 10
text = "Learn the basics of controlling cars with Python code. Master movement, turning, and navigation."
horizontal_alignment = 3
autowrap_mode = 2

[node name="Status" type="Label" parent="HoverPanel"]
visible = false
z_index = 1000
layout_mode = 0
offset_left = 60.022
offset_top = 195.0
offset_right = 428.0
offset_bottom = 225.0
scale = Vector2(0.819784, 0.928921)
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 11
text = "Complete all Tutorial levels to unlock!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="HoverPanel"]
z_index = 1
layout_mode = 0
offset_left = 462.7339
offset_top = 61.38891
offset_right = 486.7339
offset_bottom = 85.3889
rotation = 0.2617994
texture = ExtResource("2_ws25f")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="HoverPanel"]
z_index = 1
layout_mode = 0
offset_left = 381.0
offset_top = 27.0
offset_right = 598.0
offset_bottom = 280.0
rotation = 0.08726646
texture = ExtResource("6_r0spa")
expand_mode = 1

[node name="PlayButton" type="TextureButton" parent="HoverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.712
anchor_right = 0.52
anchor_bottom = 0.712
offset_left = -83.6
offset_top = -19.568
offset_right = 83.4
offset_bottom = 19.432
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_8gbxi")

[node name="Button" type="TextureRect" parent="HoverPanel/PlayButton"]
modulate = Color(1.63721, 1.63721, 1.63721, 1)
self_modulate = Color(0.525101, 0.525101, 0.525101, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.326
offset_top = -24.9613
offset_right = 109.569
offset_bottom = 97.0387
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_5ywgh")
expand_mode = 1

[node name="Logo" type="Label" parent="HoverPanel/PlayButton/Button"]
z_index = 100
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.5
anchor_right = 0.509
anchor_bottom = 0.5
offset_left = -70.8544
offset_top = -9.0
offset_right = 69.1456
offset_bottom = 11.8
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 20
text = "PLAY"
horizontal_alignment = 1

[node name="LevelSelectorPanel" type="Control" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="LevelSelectorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PanelBG" type="TextureRect" parent="LevelSelectorPanel"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_6ivqm")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="LevelSelectorPanel/PanelBG"]
z_index = 1000
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 24
text = "TUTORIAL LEVELS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LevelSelectorPanel/PanelBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.18
anchor_right = 0.9
anchor_bottom = 0.82
offset_left = 10.0
offset_top = 38.0
offset_right = -10.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="LevelList" type="VBoxContainer" parent="LevelSelectorPanel/PanelBG/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BackButton" type="TextureButton" parent="LevelSelectorPanel/PanelBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_8gbxi")

[node name="Button" type="TextureRect" parent="LevelSelectorPanel/PanelBG/BackButton"]
modulate = Color(1.63721, 1.63721, 1.63721, 1)
self_modulate = Color(0.525101, 0.525101, 0.525101, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_5ywgh")
expand_mode = 1

[node name="Logo" type="Label" parent="LevelSelectorPanel/PanelBG/BackButton/Button"]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 16
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelHoverPanel" type="Control" parent="."]
z_index = 6
layout_mode = 1
anchor_left = 0.7
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 0.7
offset_left = 10.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="PanelBG" type="TextureRect" parent="LevelHoverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_6ivqm")
expand_mode = 1
stretch_mode = 5

[node name="LevelName" type="Label" parent="LevelHoverPanel/PanelBG"]
z_index = 1000
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 94.0
offset_right = 125.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 18
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BestTime" type="Label" parent="LevelHoverPanel/PanelBG"]
z_index = 1000
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 199.0
offset_right = 89.0
offset_bottom = 229.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 14
text = "Best Time: --:--.--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Status" type="Label" parent="LevelHoverPanel/PanelBG"]
z_index = 1000
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 125.0
offset_right = 120.0
offset_bottom = 165.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 12
text = "Completed!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PlayButton" type="TextureButton" parent="LevelHoverPanel/PanelBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -124.0
offset_right = 55.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_8gbxi")

[node name="Button" type="TextureRect" parent="LevelHoverPanel/PanelBG/PlayButton"]
modulate = Color(1.63721, 1.63721, 1.63721, 1)
self_modulate = Color(0.525101, 0.525101, 0.525101, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -12.0
offset_right = 15.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_5ywgh")
expand_mode = 1

[node name="Label" type="Label" parent="LevelHoverPanel/PanelBG/PlayButton/Button"]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 16
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="Label" parent="."]
z_index = 100
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.482
anchor_top = 0.073
anchor_right = 0.951
anchor_bottom = 0.142
offset_left = -0.264038
offset_top = -0.304005
offset_right = -0.552002
offset_bottom = -0.0160065
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 45
text = "PANAY ISLAND"
horizontal_alignment = 2
script = ExtResource("11_w46t7")

[node name="Vignette" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -370.0
offset_top = -292.0
offset_right = 414.88892
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_bo8e2")
expand_mode = 1

[node name="BackButton" type="TextureButton" parent="."]
z_index = 10
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 110.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("14_back")
scene_to_load = "res://scenes/ui/Main_Menu/MainMenu.tscn"

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("9_5ywgh")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
